2015-08-19  Alex Christensen  <achristensen@webkit.org>

        CMake Windows build should not include files directly from other Source directories
        https://bugs.webkit.org/show_bug.cgi?id=148198

        Reviewed by Brent Fulgham.

        * Source/cmake/WebKitMacros.cmake:

2015-08-19  Alex Christensen  <achristensen@webkit.org>

        Build TestWTF on Mac with CMake.
        https://bugs.webkit.org/show_bug.cgi?id=147972

        Reviewed by Tim Horton.

        * Source/cmake/OptionsMac.cmake:
        Enable API tests in Mac's CMake build.

2015-08-18  Alex Christensen  <achristensen@webkit.org>

        [CMake] REGRESSION(r188540): WebKitTestRunner is not longer built and all the tests (layout and perf) fail.
        https://bugs.webkit.org/show_bug.cgi?id=148127

        Reviewed by Martin Robinson.

        * CMakeLists.txt:
        TOOLS_DIR hasn't been set yet since its defining has been moved to WebKitFS. 

2015-08-17  Alex Christensen  <achristensen@webkit.org>

        [Win CMake] Allow WebKitLibraries directory to be set from the command line
        https://bugs.webkit.org/show_bug.cgi?id=148112

        Reviewed by Brent Fulgham.

        * Source/cmake/OptionsWin.cmake:
        Don't use an environment variable for WEBKIT_LIBRARIES_DIR.  
        Instead, use the default location if nothing is passed in from the command line.
        This way we can set it from the command line for the AppleInternal build.
        Also, set the output directories to be consistent between the old and new build systems (and ninja).

2015-08-17  Alex Christensen  <achristensen@webkit.org>

        Build Debug Suffix on Windows with CMake
        https://bugs.webkit.org/show_bug.cgi?id=148083

        Reviewed by Brent Fulgham.

        * Source/cmake/OptionsWin.cmake:
        Use debug libraries in debug suffix builds.

2015-08-17  Alex Christensen  <achristensen@webkit.org>

        Move some commands from ./CMakeLists.txt to Source/cmake