@@ -128,7 +128,7 @@ find_package(CairoGL 1.10.2 COMPONENTS ${CAIROGL_COMPONENTS})
 # EGL is not, and ENABLE_X11_TARGET is OFF, this guess is wrong and the user must override it. We
 # can't check ENABLE_X11_TARGET at this point because we don't know whether it's enabled until
 # WEBKIT_OPTION_END has been called, and at that point it's too late to change default values.
-WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_ACCELERATED_2D_CANVAS PUBLIC ${CAIROGL_FOUND})
+WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_ACCELERATED_2D_CANVAS PUBLIC CAIROGL_FOUND)
 
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_CREDENTIAL_STORAGE PUBLIC ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_DRAG_SUPPORT PUBLIC ON)
