@@ -1,3 +1,15 @@
+2015-08-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        [GTK] Auto-detection of cairo-gl fails
+        https://bugs.webkit.org/show_bug.cgi?id=148189
+
+        Reviewed by Žan Doberšek.
+
+        * Source/cmake/FindCairoGL.cmake: only check for components if the main package has
+        been found. Otherwise, if either GLX or EGL are available, cairo-gl will also be
+        deemed available, which might not be the case.
+        * Source/cmake/OptionsGTK.cmake: fix the usage of the CAIROGL_FOUND variable.
+
 2015-08-19  Alex Christensen  <achristensen@webkit.org>
 
         CMake Windows build should not include files directly from other Source directories
